# v8_quickjs_backend

./: CMakeLists.txt  README.md  make_android.sh  make_ios.sh  make_win.sh
.github/workflows/: build.yml
dev/: CMakeLists.txt
include/: quickjs-msvc.h  v8.h
include/Blob/Win32/: SnapshotBlob.h
include/Blob/Win64/: SnapshotBlob.h
quickjs/: quickjs.c
src/: quickjs-wrap.c  v8-impl.cc
test/: CMakeLists.txt  hello-world.cc  make_osx_qjs.sh  make_osx_v8.sh  make_win64_qjs.bat  make_win64_v8.bat
win/: CMakeLists.txt  make_win32.bat  make_win64.bat
